devtools/laymos/test/fixtures/story-ejection/invalid/incomplete-decision.ts
import { decision } from 'laymos/story';

export const value = decision('Choice', {}, input).when(
  'a',
  {},
  () => effect,
);
